Se avanzo bastante